--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,11 @@
         "laravel/framework": "^6.2",
         "laravel/tinker": "^1.0",
         "laravel/ui": "^1.1",
-        "laravelcollective/html": "^6.0"
+        "laravelcollective/html": "^6.0",
+        "infyomlabs/laravel-generator": "6.0.x-dev",
+        "laravelcollective/html": "^6.0",
+        "infyomlabs/adminlte-templates": "6.0.x-dev",
+        "doctrine/dbal": "~2.3"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
