--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/homestead": "^9.3",
         "laravel/tinker": "^1.0",
         "laravel/ui": "^1.1",
-        "laravelcollective/html": "^6.0"
+        "laravelcollective/html": "^6.0",
+        "ixudra/curl": "6.*"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
